# tel-rag

./: LICENSE  README.md  pyproject.toml
data/csv/: test.csv  train.csv
src/indexing/: chunking.py  enrich.py  loading.py  main.py  preprocessing.py  storage.py
src/mcq_answer/: pick_option.py
src/retrieval/: main.py  storage.py
